--- a/BirdCLEF2023-Save-raw-train-audio.ipynb
+++ b/BirdCLEF2023-Save-raw-train-audio.ipynb
@@ -1,17 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "eb5e6f63-4477-4fb3-993e-894530dd6e23",
+   "metadata": {},
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/tomzso/Birdclef2023-/blob/main/BirdCLEF2023-Save-raw-train-audio.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "ExecuteTime": {
      "end_time": "2023-12-09T23:21:24.514488Z",
      "start_time": "2023-12-09T23:21:12.467489400Z"
+    },
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
     }
    },
    "outputs": [],
@@ -37,10 +47,13 @@
    "execution_count": 2,
    "id": "803ce1c90653ec32",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T17:09:48.637921Z",
      "start_time": "2023-12-09T17:09:48.633245200Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -78,6 +91,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "96974dc24a6ec93b",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# Download the background audio files\n",
@@ -93,15 +113,18 @@
     "# Download the bird audio files (birdclef-2023.zip)\n",
     "\n",
     "!wget --content-disposition 'https://drive.google.com/uc?export=download&id=1dk0qIGOQiXPKKJzNi-uwjcX0-vQ2PQ7j&confirm=t' #  https://drive.google.com/file/d/1dk0qIGOQiXPKKJzNi-uwjcX0-vQ2PQ7j/view?usp=sharing"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "96974dc24a6ec93b"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7e6a0f65fbb1638c",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# Replace 'zip_file_path' with the path of the zip file\n",
@@ -116,21 +139,20 @@
     "    zip_ref.extractall(output_directory)\n",
     "\n",
     "print(f\"Files extracted to '{output_directory}'.\")\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "7e6a0f65fbb1638c"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "id": "908efc2f4b024b6b",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T17:09:48.688750500Z",
      "start_time": "2023-12-09T17:09:48.638918900Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -144,10 +166,13 @@
    "execution_count": 4,
    "id": "51ca9b9cea9d5dc5",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T17:09:48.690749900Z",
      "start_time": "2023-12-09T17:09:48.658352Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -164,10 +189,13 @@
    "execution_count": 5,
    "id": "c4bd11dd9eeeb578",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T17:10:05.013020900Z",
      "start_time": "2023-12-09T17:09:48.674750Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -185,10 +213,13 @@
    "execution_count": 44,
    "id": "50285c0bba53b347",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T21:08:47.278217300Z",
      "start_time": "2023-12-09T21:08:46.820257400Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -217,10 +248,13 @@
    "execution_count": 45,
    "id": "85faa87622a6b794",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T21:08:47.297217700Z",
      "start_time": "2023-12-09T21:08:47.053671200Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -250,10 +284,13 @@
    "execution_count": 46,
    "id": "bc7d12d7d65443a2",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T21:08:47.334217100Z",
      "start_time": "2023-12-09T21:08:47.237347400Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -308,10 +345,13 @@
    "execution_count": 47,
    "id": "4513ef7e068ef27f",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T21:08:47.366218100Z",
      "start_time": "2023-12-09T21:08:47.269731800Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -349,7 +389,10 @@
    "execution_count": null,
    "id": "e8331dc86e871cfa",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -361,10 +404,13 @@
    "execution_count": 48,
    "id": "94c78c318d8ce178",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T21:08:47.943464200Z",
      "start_time": "2023-12-09T21:08:47.864339700Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -375,10 +421,13 @@
    "execution_count": 48,
    "id": "7f7d7c136c7aea5f",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T21:08:48.234397600Z",
      "start_time": "2023-12-09T21:08:48.136864Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -389,10 +438,13 @@
    "execution_count": 49,
    "id": "ce9d204c31abf052",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T21:08:48.803899Z",
      "start_time": "2023-12-09T21:08:48.767291800Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -670,16 +722,19 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "outputs": [],
-   "source": [],
+   "id": "bd3580375295b682",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T23:11:04.361693800Z",
      "start_time": "2023-12-09T23:11:04.317180Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
-   "id": "bd3580375295b682"
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -690,7 +745,10 @@
      "end_time": "2023-12-03T19:09:19.214246300Z",
      "start_time": "2023-12-03T19:09:19.161685900Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": []
@@ -700,10 +758,13 @@
    "execution_count": 51,
    "id": "a54e29e18642f1cb",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T23:11:00.319821400Z",
      "start_time": "2023-12-09T23:11:00.146309800Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -724,10 +785,13 @@
    "execution_count": 52,
    "id": "b000d1c6ff8e5ea8",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T23:11:01.460751600Z",
      "start_time": "2023-12-09T23:11:01.204763900Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -742,7 +806,10 @@
    "execution_count": null,
    "id": "2a3f91b96753607b",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": []
@@ -752,12 +819,15 @@
    "execution_count": 1,
    "id": "bed5054430a46b1c",
    "metadata": {
-    "collapsed": false,
-    "tags": [],
     "ExecuteTime": {
      "end_time": "2023-12-04T11:22:39.213732400Z",
      "start_time": "2023-12-04T11:22:31.514526700Z"
-    }
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "tags": []
    },
    "outputs": [],
    "source": []
@@ -767,10 +837,13 @@
    "execution_count": 2,
    "id": "62425383baeaa986",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T23:21:24.539437600Z",
      "start_time": "2023-12-09T23:21:24.523447500Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -822,10 +895,13 @@
    "execution_count": 55,
    "id": "7053e9abe62ceb5e",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T23:15:11.711966400Z",
      "start_time": "2023-12-09T23:15:11.466004500Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -841,10 +917,13 @@
    "execution_count": null,
    "id": "cfb06cc8a1c39229",
    "metadata": {
-    "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
      "start_time": "2023-12-09T23:15:15.087716100Z"
+    },
+    "collapsed": false,
+    "is_executing": true,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -859,7 +938,10 @@
    "id": "4ac9e270458d7db",
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "is_executing": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -871,10 +953,13 @@
    "execution_count": 3,
    "id": "1d532cdfb9e17cd9",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T23:21:27.266005Z",
      "start_time": "2023-12-09T23:21:27.207891700Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -942,10 +1027,13 @@
    "execution_count": 4,
    "id": "3c12c8bacc2b3061",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T23:21:29.377705700Z",
      "start_time": "2023-12-09T23:21:29.296941600Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -1005,7 +1093,10 @@
    "execution_count": null,
    "id": "c0632956350e1f75",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1027,10 +1118,13 @@
    "execution_count": 6,
    "id": "dc0ed5c04fb2478e",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-09T23:36:44.173266200Z",
      "start_time": "2023-12-09T23:30:50.083709400Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -1044,7 +1138,10 @@
    "execution_count": null,
    "id": "6afd361402fc56d9",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1059,7 +1156,10 @@
    "execution_count": null,
    "id": "f0278e606fc8ad3d",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1074,7 +1174,10 @@
    "execution_count": null,
    "id": "7a819cdeae6bfbe9",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1089,7 +1192,10 @@
    "execution_count": null,
    "id": "974614bab8a847",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": []
@@ -1099,12 +1205,15 @@
    "execution_count": 9,
    "id": "748e7b5288a0d4af",
    "metadata": {
-    "collapsed": false,
-    "tags": [],
     "ExecuteTime": {
      "end_time": "2023-12-09T23:44:57.533477400Z",
      "start_time": "2023-12-09T23:44:57.519231800Z"
-    }
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1143,12 +1252,15 @@
    "execution_count": 10,
    "id": "1e445eb26255f50c",
    "metadata": {
-    "collapsed": false,
-    "tags": [],
     "ExecuteTime": {
      "end_time": "2023-12-09T23:44:57.548776400Z",
      "start_time": "2023-12-09T23:44:57.525480900Z"
-    }
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1189,12 +1301,15 @@
    "execution_count": 17,
    "id": "fd3053d4a6c7a79f",
    "metadata": {
-    "collapsed": false,
-    "tags": [],
     "ExecuteTime": {
      "end_time": "2023-12-10T00:33:31.664149400Z",
      "start_time": "2023-12-10T00:33:31.630634Z"
-    }
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1275,11 +1390,11 @@
    "execution_count": 12,
    "id": "d5da1345-7b73-476d-a08d-1ad9ee31560b",
    "metadata": {
-    "tags": [],
     "ExecuteTime": {
      "end_time": "2023-12-09T23:50:43.397795Z",
      "start_time": "2023-12-09T23:50:43.336794200Z"
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1319,11 +1434,11 @@
    "execution_count": 12,
    "id": "ac2ba3fb-9af3-44b9-aff3-75055588690f",
    "metadata": {
-    "tags": [],
     "ExecuteTime": {
      "end_time": "2023-12-09T23:50:45.389977700Z",
      "start_time": "2023-12-09T23:50:45.311459200Z"
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": []
@@ -1363,7 +1478,10 @@
    "execution_count": null,
    "id": "219a28965b50fbd",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1391,12 +1509,15 @@
    "execution_count": null,
    "id": "986380b694f899fd",
    "metadata": {
-    "collapsed": false,
-    "tags": [],
     "ExecuteTime": {
      "end_time": "2023-12-10T00:32:44.858486Z",
      "start_time": "2023-12-10T00:32:44.853487900Z"
-    }
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1408,7 +1529,10 @@
    "execution_count": null,
    "id": "b54a713fd7faac20",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": []
@@ -1430,7 +1554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
