--- a/BirdCLEF2023_Training_Data.ipynb
+++ b/BirdCLEF2023_Training_Data.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -298,7 +298,46 @@
       "\n",
       "Epoch 00001: val_loss improved from inf to 5.31608, saving model to weights.hdf5\n",
       "Epoch 2/30\n",
-      "111/202 [===============>..............] - ETA: 48s - loss: 4.6145 - accuracy: 0.1101"
+      "202/202 [==============================] - 144s 712ms/step - loss: 4.5445 - accuracy: 0.1200 - val_loss: 4.9696 - val_accuracy: 0.0843\n",
+      "\n",
+      "Epoch 00002: val_loss improved from 5.31608 to 4.96957, saving model to weights.hdf5\n",
+      "Epoch 3/30\n",
+      "202/202 [==============================] - 149s 739ms/step - loss: 4.2491 - accuracy: 0.1586 - val_loss: 4.7346 - val_accuracy: 0.1057\n",
+      "\n",
+      "Epoch 00003: val_loss improved from 4.96957 to 4.73460, saving model to weights.hdf5\n",
+      "Epoch 4/30\n",
+      "202/202 [==============================] - 141s 698ms/step - loss: 4.0361 - accuracy: 0.1878 - val_loss: 4.6889 - val_accuracy: 0.1201\n",
+      "\n",
+      "Epoch 00004: val_loss improved from 4.73460 to 4.68889, saving model to weights.hdf5\n",
+      "Epoch 5/30\n",
+      "202/202 [==============================] - 139s 686ms/step - loss: 3.8575 - accuracy: 0.2132 - val_loss: 4.6762 - val_accuracy: 0.1268\n",
+      "\n",
+      "Epoch 00005: val_loss improved from 4.68889 to 4.67617, saving model to weights.hdf5\n",
+      "Epoch 6/30\n",
+      "202/202 [==============================] - 138s 684ms/step - loss: 3.7096 - accuracy: 0.2322 - val_loss: 4.6648 - val_accuracy: 0.1390\n",
+      "\n",
+      "Epoch 00006: val_loss improved from 4.67617 to 4.66477, saving model to weights.hdf5\n",
+      "Epoch 7/30\n",
+      "202/202 [==============================] - 138s 682ms/step - loss: 3.5864 - accuracy: 0.2509 - val_loss: 4.6806 - val_accuracy: 0.1425\n",
+      "\n",
+      "Epoch 00007: val_loss did not improve from 4.66477\n",
+      "Epoch 8/30\n",
+      "202/202 [==============================] - 138s 682ms/step - loss: 3.4776 - accuracy: 0.2682 - val_loss: 4.7173 - val_accuracy: 0.1485\n",
+      "\n",
+      "Epoch 00008: val_loss did not improve from 4.66477\n",
+      "Epoch 9/30\n",
+      "202/202 [==============================] - 138s 682ms/step - loss: 3.3879 - accuracy: 0.2808 - val_loss: 4.7416 - val_accuracy: 0.1504\n",
+      "\n",
+      "Epoch 00009: val_loss did not improve from 4.66477\n",
+      "Epoch 10/30\n",
+      "202/202 [==============================] - 137s 679ms/step - loss: 3.2940 - accuracy: 0.2935 - val_loss: 4.7174 - val_accuracy: 0.1577\n",
+      "\n",
+      "Epoch 00010: val_loss did not improve from 4.66477\n",
+      "Epoch 11/30\n",
+      "202/202 [==============================] - 142s 701ms/step - loss: 3.2125 - accuracy: 0.3070 - val_loss: 4.7633 - val_accuracy: 0.1598\n",
+      "\n",
+      "Epoch 00011: val_loss did not improve from 4.66477\n",
+      "Epoch 00011: early stopping\n"
      ]
     }
    ],
@@ -359,23 +398,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Cannot assign to variable dense_11/kernel:0 due to variable shape (1024, 512) and value shape (1024, 1024) are incompatible",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 9\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Shuffle training dataset\u001b[39;00m\n\u001b[0;32m      6\u001b[0m train_dataset \u001b[38;5;241m=\u001b[39m train_dataset\u001b[38;5;241m.\u001b[39mshuffle(\u001b[38;5;241m5\u001b[39m)\n\u001b[1;32m----> 9\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_weights\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mweights.hdf5\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m batch_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m128\u001b[39m\n\u001b[0;32m     12\u001b[0m evaluation_result \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mevaluate(test_dataset\u001b[38;5;241m.\u001b[39mbatch(batch_size))\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\keras\\engine\\training.py:2361\u001b[0m, in \u001b[0;36mModel.load_weights\u001b[1;34m(self, filepath, by_name, skip_mismatch, options)\u001b[0m\n\u001b[0;32m   2358\u001b[0m       hdf5_format\u001b[38;5;241m.\u001b[39mload_weights_from_hdf5_group_by_name(\n\u001b[0;32m   2359\u001b[0m           f, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlayers, skip_mismatch\u001b[38;5;241m=\u001b[39mskip_mismatch)\n\u001b[0;32m   2360\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 2361\u001b[0m       \u001b[43mhdf5_format\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_weights_from_hdf5_group\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlayers\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2363\u001b[0m \u001b[38;5;66;03m# Perform any layer defined finalization of the layer state.\u001b[39;00m\n\u001b[0;32m   2364\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m layer \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlayers:\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\keras\\saving\\hdf5_format.py:713\u001b[0m, in \u001b[0;36mload_weights_from_hdf5_group\u001b[1;34m(f, layers)\u001b[0m\n\u001b[0;32m    705\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLayer #\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(k) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m (named \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m layer\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m+\u001b[39m\n\u001b[0;32m    706\u001b[0m                      \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m in the current model) was found to \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    707\u001b[0m                      \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcorrespond to layer \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m name \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m in the save file. \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    710\u001b[0m                      \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m weights, but the saved weights have \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m\n\u001b[0;32m    711\u001b[0m                      \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mlen\u001b[39m(weight_values)) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m elements.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    712\u001b[0m   weight_value_tuples \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mzip\u001b[39m(symbolic_weights, weight_values)\n\u001b[1;32m--> 713\u001b[0m \u001b[43mbackend\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbatch_set_value\u001b[49m\u001b[43m(\u001b[49m\u001b[43mweight_value_tuples\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\.conda\\envs\\env2\\lib\\site-packages\\tensorflow\\python\\util\\dispatch.py:206\u001b[0m, in \u001b[0;36madd_dispatch_support.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    204\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Call target, and fall back on dispatchers if there is a TypeError.\"\"\"\u001b[39;00m\n\u001b[0;32m    205\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 206\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m target(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    207\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mTypeError\u001b[39;00m, \u001b[38;5;167;01mValueError\u001b[39;00m):\n\u001b[0;32m    208\u001b[0m   \u001b[38;5;66;03m# Note: convert_to_eager_tensor currently raises a ValueError, not a\u001b[39;00m\n\u001b[0;32m    209\u001b[0m   \u001b[38;5;66;03m# TypeError, when given unexpected types.  So we need to catch both.\u001b[39;00m\n\u001b[0;32m    210\u001b[0m   result \u001b[38;5;241m=\u001b[39m dispatch(wrapper, args, kwargs)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\keras\\backend.py:3775\u001b[0m, in \u001b[0;36mbatch_set_value\u001b[1;34m(tuples)\u001b[0m\n\u001b[0;32m   3773\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m tf\u001b[38;5;241m.\u001b[39mcompat\u001b[38;5;241m.\u001b[39mv1\u001b[38;5;241m.\u001b[39mexecuting_eagerly_outside_functions():\n\u001b[0;32m   3774\u001b[0m   \u001b[38;5;28;01mfor\u001b[39;00m x, value \u001b[38;5;129;01min\u001b[39;00m tuples:\n\u001b[1;32m-> 3775\u001b[0m     \u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43massign\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43masarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype_numpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3776\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   3777\u001b[0m   \u001b[38;5;28;01mwith\u001b[39;00m get_graph()\u001b[38;5;241m.\u001b[39mas_default():\n",
-      "File \u001b[1;32m~\\.conda\\envs\\env2\\lib\\site-packages\\tensorflow\\python\\ops\\resource_variable_ops.py:899\u001b[0m, in \u001b[0;36mBaseResourceVariable.assign\u001b[1;34m(self, value, use_locking, name, read_value)\u001b[0m\n\u001b[0;32m    897\u001b[0m   \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    898\u001b[0m     tensor_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname)\n\u001b[1;32m--> 899\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    900\u001b[0m       (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot assign to variable\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m due to variable shape \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m and value \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    901\u001b[0m        \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshape \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m are incompatible\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m%\u001b[39m\n\u001b[0;32m    902\u001b[0m       (tensor_name, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_shape, value_tensor\u001b[38;5;241m.\u001b[39mshape))\n\u001b[0;32m    903\u001b[0m assign_op \u001b[38;5;241m=\u001b[39m gen_resource_variable_ops\u001b[38;5;241m.\u001b[39massign_variable_op(\n\u001b[0;32m    904\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandle, value_tensor, name\u001b[38;5;241m=\u001b[39mname)\n\u001b[0;32m    905\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m read_value:\n",
-      "\u001b[1;31mValueError\u001b[0m: Cannot assign to variable dense_11/kernel:0 due to variable shape (1024, 512) and value shape (1024, 1024) are incompatible"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45/45 [==============================] - 28s 608ms/step - loss: 93.9080 - accuracy: 0.0037\n"
      ]
     }
    ],
