--- a/BirdCLEF2023_Training_Data.ipynb
+++ b/BirdCLEF2023_Training_Data.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/tomzso/Birdclef2023-/blob/main/BirdCLEF2023-Save-raw-train-audio.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -398,14 +407,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45/45 [==============================] - 28s 608ms/step - loss: 93.9080 - accuracy: 0.0037\n"
+      "45/45 [==============================] - 47s 593ms/step - loss: 93.9080 - accuracy: 0.0037\n"
      ]
     }
    ],
